Fixed some bugs in physics engine